; ModuleID = '/home/carl/AnghaBench/rufus/src/syslinux/libinstaller/extr_setadv.c_syslinux_validate_adv.c'
source_filename = "/home/carl/AnghaBench/rufus/src/syslinux/libinstaller/extr_setadv.c_syslinux_validate_adv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ADV_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @syslinux_validate_adv(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = load i32, i32* @ADV_SIZE, align 4
  %6 = mul nsw i32 0, %5
  %7 = sext i32 %6 to i64
  %8 = getelementptr inbounds i8, i8* %4, i64 %7
  %9 = call i64 @adv_consistent(i8* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %19

11:                                               ; preds = %1
  %12 = load i8*, i8** %3, align 8
  %13 = load i32, i32* @ADV_SIZE, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i8, i8* %12, i64 %14
  %16 = load i8*, i8** %3, align 8
  %17 = load i32, i32* @ADV_SIZE, align 4
  %18 = call i32 @memcpy(i8* %15, i8* %16, i32 %17)
  store i32 0, i32* %2, align 4
  br label %38

19:                                               ; preds = %1
  %20 = load i8*, i8** %3, align 8
  %21 = load i32, i32* @ADV_SIZE, align 4
  %22 = mul nsw i32 1, %21
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i8, i8* %20, i64 %23
  %25 = call i64 @adv_consistent(i8* %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %35

27:                                               ; preds = %19
  %28 = load i8*, i8** %3, align 8
  %29 = load i8*, i8** %3, align 8
  %30 = load i32, i32* @ADV_SIZE, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i8, i8* %29, i64 %31
  %33 = load i32, i32* @ADV_SIZE, align 4
  %34 = call i32 @memcpy(i8* %28, i8* %32, i32 %33)
  store i32 0, i32* %2, align 4
  br label %38

35:                                               ; preds = %19
  %36 = load i8*, i8** %3, align 8
  %37 = call i32 @syslinux_reset_adv(i8* %36)
  store i32 -1, i32* %2, align 4
  br label %38

38:                                               ; preds = %35, %27, %11
  %39 = load i32, i32* %2, align 4
  ret i32 %39
}

declare dso_local i64 @adv_consistent(i8*) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @syslinux_reset_adv(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
